--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "jwt-decode": "^4.0.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.5",
