adiciona schemas de validação de input e estiliza span de retorno de erro para o usuario saber oque está incorreto

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
