remove linhas descenessarias

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
+        "fakecards",
         "hookform",
         "nextauth",
+        "observacao",
         "tipar"
     ]
 }
